- Styling: fixed dropdown for dark mode for v2.

--- a/RockWeb/Themes/RockNextGen/Styles/theme.css
+++ b/RockWeb/Themes/RockNextGen/Styles/theme.css
@@ -16867,72 +16867,12 @@ iframe.file-browser {
   color: var(--color-interface-medium);
 }
 .ant-select .ant-select-arrow {
-  color: var(--color-interface-stronger);
+  color: var(--color-interface-strong);
 }
 .ant-select .ant-select-clear {
   color: var(--color-interface-stronger);
   font-size: var(--font-size-xsmall);
   background: var(--color-interface-softest);
-}
-.ant-select .ant-select-dropdown {
-  color: var(--color-interface-stronger);
-  padding: var(--spacing-tiny) 0;
-  font-size: var(--font-size-small);
-  background-color: var(--color-interface-softest);
-  border: 1px solid var(--color-interface-soft);
-}
-.ant-select .ant-select-dropdown-empty {
-  color: var(--color-interface-stronger);
-}
-.ant-select .ant-select-item-empty {
-  padding: var(--spacing-tiny) var(--spacing-small);
-  color: var(--color-interface-stronger);
-  font-size: var(--font-size-small);
-  color: var(--color-interface-stronger);
-}
-.ant-select .ant-select-item {
-  padding: var(--spacing-tiny) var(--spacing-small);
-  color: var(--color-interface-stronger);
-  font-size: var(--font-size-small);
-}
-.ant-select .ant-select-item-group {
-  color: var(--color-interface-medium);
-  font-size: var(--font-size-xsmall);
-}
-.ant-select .ant-select-item-option-active:not(.ant-select-item-option-disabled) {
-  background-color: var(--color-interface-softer);
-}
-.ant-select .ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
-  color: var(--color-interface-strong);
-  font-weight: var(--font-weight-semibold);
-  background-color: var(--color-interface-soft);
-}
-.ant-select .ant-select-item-option-disabled {
-  color: var(--color-interface-stronger);
-}
-.ant-select .ant-select-item-option-disabled .ant-select-item-option-selected {
-  background-color: var(--color-interface-softer);
-}
-.ant-select .ant-select-item-option-grouped {
-  padding-left: var(--spacing-medium);
-}
-.ant-select .ant-select-lg {
-  font-size: var(--font-size-regular);
-}
-.ant-select .ant-select-dropdown-rtl .ant-select-item-option-grouped {
-  padding-right: var(--spacing-large);
-  padding-left: var(--spacing-small);
-}
-.ant-select .ant-select-rtl.ant-select-multiple.ant-select-show-arrow .ant-select-selector,
-.ant-select .ant-select-rtl.ant-select-multiple.ant-select-allow-clear .ant-select-selector {
-  padding-right: var(--spacing-tiny);
-  padding-left: var(--spacing-large);
-}
-.ant-select .ant-select-rtl.ant-select-multiple .ant-select-selection-item-content {
-  margin-left: var(--spacing-tiny);
-}
-.ant-select .ant-select-auto-complete {
-  color: var(--color-interface-stronger);
 }
 .ant-select.form-control {
   padding: 0;
@@ -16956,9 +16896,6 @@ iframe.file-browser {
   height: 16px;
   font-size: var(--font-size-h6);
 }
-.input-group .ant-select.ant-select-focused {
-  z-index: 3;
-}
 .ant-select.ant-select-focused:not(.ant-select-disabled).form-control {
   border: 1px solid var(--color-primary);
   outline: none;
@@ -16969,12 +16906,89 @@ iframe.file-browser {
   outline: none;
   box-shadow: none;
 }
+.ant-select .input-group.ant-select-focused {
+  z-index: 3;
+}
 .ant-select .ant-select-clear {
   right: 30px;
 }
 .ant-select-dropdown .ant-select-item-option-content {
   white-space: normal;
   word-wrap: break-word;
+}
+
+.ant-select-dropdown {
+  color: var(--color-interface-stronger);
+  padding: var(--spacing-tiny) 0;
+  font-size: var(--font-size-regular);
+  background-color: var(--color-interface-softest);
+  border: 1px solid var(--color-interface-soft);
+}
+
+.ant-select-dropdown-empty {
+  color: var(--color-interface-stronger);
+}
+
+.ant-select-item-empty {
+  padding: var(--spacing-tiny) var(--spacing-small);
+  color: var(--color-interface-stronger);
+  font-size: var(--font-size-small);
+  color: var(--color-interface-stronger);
+}
+
+.ant-select-item {
+  padding: var(--spacing-tiny) var(--spacing-small);
+  color: var(--color-interface-stronger);
+  font-size: var(--font-size-small);
+}
+
+.ant-select-item-group {
+  color: var(--color-interface-medium);
+  font-size: var(--font-size-xsmall);
+}
+
+.ant-select-item-option-active:not(.ant-select-item-option-disabled) {
+  background-color: var(--color-interface-softer);
+}
+
+.ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
+  color: var(--color-interface-strong);
+  font-weight: var(--font-weight-semibold);
+  background-color: var(--color-info-soft);
+}
+
+.ant-select-item-option-disabled {
+  color: var(--color-interface-soft);
+}
+.ant-select-item-option-disabled .ant-select-item-option-selected {
+  background-color: var(--color-interface-softer);
+}
+
+.ant-select-item-option-grouped {
+  padding-left: var(--spacing-medium);
+}
+
+.ant-select-lg {
+  font-size: var(--font-size-regular);
+}
+
+.ant-select-dropdown-rtl .ant-select-item-option-grouped {
+  padding-right: var(--spacing-large);
+  padding-left: var(--spacing-small);
+}
+
+.ant-select-rtl.ant-select-multiple.ant-select-show-arrow .ant-select-selector,
+.ant-select-rtl.ant-select-multiple.ant-select-allow-clear .ant-select-selector {
+  padding-right: var(--spacing-tiny);
+  padding-left: var(--spacing-large);
+}
+
+.ant-select-rtl.ant-select-multiple .ant-select-selection-item-content {
+  margin-left: var(--spacing-tiny);
+}
+
+.ant-select-auto-complete {
+  color: var(--color-interface-stronger);
 }
 
 .main-content:has(.profile-content, .person-profile) {
